# RLHF-pipeline

./: .env.example  .gitignore  HANDOFF.md  LICENSE  PROGRESS.md  README.md  app.py  chat  kernel-metadata.json  pyproject.toml  requirements.txt  ui
configs/: dpo.yaml  grpo.yaml  ppo.yaml  reward_model.yaml  sft.yaml  smoke.yaml
data/: benign_scary.jsonl  honesty.jsonl
notebooks/: kaggle_ppo_1.5b.ipynb  kaggle_rewardbench.ipynb  kaggle_rlhf.ipynb  kaggle_rlhf_full.ipynb  kaggle_rm_1.5b.ipynb  kaggle_rm_datamix.ipynb  kaggle_rm_experiment.ipynb  kaggle_rm_grm.ipynb  kaggle_rm_multiobjective_1p5b.ipynb  kaggle_rm_safety.ipynb
rlhf/: __init__.py  cli.py  inference.py
rlhf/algorithms/: __init__.py  common.py  dpo_trainer.py  grpo_trainer.py  ppo_trainer.py  reward_trainer.py  sft_trainer.py
rlhf/data/: __init__.py  preference.py  prompts.py  sft.py
rlhf/eval/: __init__.py  llm_judge.py  rewardbench.py
rlhf/models/: __init__.py  loading.py  policy.py  reward_model.py  value_head.py
rlhf/utils/: __init__.py  common.py  config.py  generation.py  metrics.py  running.py  tensor_ops.py  vllm_gen.py
scripts/: chat.py  eval_rewardbench.py  eval_rewardbench2.py  evaluate.py  gen_benign_scary.py  gen_honesty.py  make_rm_dataset.sh  probe_honesty.py  run_on_kaggle.sh  smoke_test.py  sweep_heads.py  train_dpo.py  train_gating.py  train_grpo.py  train_ppo.py  train_reward_model.py  train_sft.py
tests/: test_pipeline.py
